--- a/Alpha/AlphaMvc/Views/Authorization/CreateAuthorization.cshtml
+++ b/Alpha/AlphaMvc/Views/Authorization/CreateAuthorization.cshtml
@@ -135,3 +135,8 @@
             <button type="button" class="btn btn-primary" onclick="ConfirmDialog('Create', 'Authorization', 0)">Save</button>
         </li>
     </ul>
+<script type="text/javascript">
+    $(document).ready(function () {
+        CheckAuthorization();
+    });
+</script>
