--- a/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
@@ -40,7 +40,7 @@
     <tr>
         <td>
             <label class="topicmargin-size60-2">BreakDownCost</label>
-            <a href="/BDC/CreateBDC"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" id="BDCcreateDisable"/></a>
+            <a href="/BDC/CreateBDC"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" id="BDCCreate"/></a>
             <input id="chkShowAll" type="checkbox" class="chkShowAllinput" onchange="GetChecked(this)">
             <label for="chkShowAll" class="chkShowAll">Show All</label>
             <div class="topicText">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
