--- a/Alpha/AlphaMvc/Views/Borrow/CreateBorrow.cshtml
+++ b/Alpha/AlphaMvc/Views/Borrow/CreateBorrow.cshtml
@@ -93,3 +93,8 @@
 </form>
     }
 </div>
+<script type="text/javascript">
+    $(document).ready(function () {
+        CheckAuthorization();
+    });
+</script>
