--- a/Alpha/AlphaMvc/Views/IncomeMaster/EditIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/EditIncomeMaster.cshtml
@@ -32,6 +32,7 @@
         var val = after.split('=');
         var Isview = val[2];
         GetData(@Request.Params["id"]);
+        CheckAuthorization();
         ControlEnable(Isview);
     });
 </script>
