--- a/Alpha/AlphaMvc/Views/WageTeachnician/CreateWageTeachnician.cshtml
+++ b/Alpha/AlphaMvc/Views/WageTeachnician/CreateWageTeachnician.cshtml
@@ -142,6 +142,7 @@
         var val = after.split('=');
         var Isview = val[2];
         GetData(@Request.Params["id"]);
+        CheckAuthorization();
         ControlEnable(Isview);
 
     });
