--- a/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
@@ -137,3 +137,8 @@
         </form>
     }
 </div>
+<script type="text/javascript">
+    $(document).ready(function () {
+        CheckAuthorization();
+    });
+</script>
