--- a/Alpha/AlphaMvc/Views/ExpenseMaster/CreateExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/CreateExpenseMaster.cshtml
@@ -22,3 +22,8 @@
     </form>
 
 }
+<script type="text/javascript">
+    $(document).ready(function () {
+        CheckAuthorization();
+    });
+</script>
