--- a/Alpha/AlphaMvc/Views/IncomeMaster/CreateIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/CreateIncomeMaster.cshtml
@@ -21,3 +21,8 @@
             </form>
         }
     </div>
+<script type="text/javascript">
+    $(document).ready(function () {
+        CheckAuthorization();
+    });
+</script>
