--- a/Alpha/AlphaMvc/Views/SecurityProfile/CreateSecurityProfile.cshtml
+++ b/Alpha/AlphaMvc/Views/SecurityProfile/CreateSecurityProfile.cshtml
@@ -33,3 +33,8 @@
         </form>
     }
 </div>
+<script type="text/javascript">
+    $(document).ready(function () {
+        CheckAuthorization();
+    });
+</script>
