--- a/Alpha/AlphaMvc/Views/SecurityProfile/EditSecurityProfile.cshtml
+++ b/Alpha/AlphaMvc/Views/SecurityProfile/EditSecurityProfile.cshtml
@@ -12,7 +12,7 @@
             <ul class="form-style">
                 <li>
                     <label>Profile<span class="required">*</span></label>
-                    <input type="text" id="txtProfile" class="field-divided text-floatleft" placeholder="Profile" />&nbsp;<button type="button" class="btn btn-primary" onclick="Isvalidate('Update', 'SecurityProfile', @Request.Params["id"])">Save</button>
+                    <input type="text" id="txtProfile" class="field-divided text-floatleft" placeholder="Profile" />&nbsp;<button type="button" id="btnSave" class="btn btn-primary" onclick="Isvalidate('Update', 'SecurityProfile', @Request.Params["id"])">Save</button>
                 </li>
             </ul>
             <br />
@@ -39,8 +39,9 @@
         var after = input.split('?')[1]
         var val = after.split('=');
         var ID = val[1];
+        var Isview = val[2];
         GetData(@Request.Params["id"]);
+        ControlEnable(Isview);
 
     });
-
 </script>
