--- a/Alpha/AlphaMvc/Views/SecurityProfile/IndexSecurityProfile.cshtml
+++ b/Alpha/AlphaMvc/Views/SecurityProfile/IndexSecurityProfile.cshtml
@@ -37,7 +37,7 @@
     <tr>
         <td>
             <label class="topicmargin-size67">Security Profile</label>
-            <a href="/SecurityProfile/CreateSecurityProfile"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" id="admincreateDisable" /></a>
+            <a href="/SecurityProfile/CreateSecurityProfile"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" id="imgAdminCreate" /></a>
             <div class="topicText">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
         </td>
     </tr>
