--- a/Alpha/AlphaMvc/Views/Technician/ExpiredTechnician.cshtml
+++ b/Alpha/AlphaMvc/Views/Technician/ExpiredTechnician.cshtml
@@ -169,7 +169,7 @@ $(document).ready(function () {
         currentMonth = parseInt(currentMonth.format('M'));
         GetDetailManPower(currentMonth);
     });
-
+    CheckAuthorization();
 });
 </script>
 <style>
