--- a/Alpha/AlphaMvc/Content/Style.css
+++ b/Alpha/AlphaMvc/Content/Style.css
@@ -69,6 +69,17 @@
     margin-left: 0%;  
     margin-right: 0%;
 }
+.topicText-2{
+    color: #FFFFFF;
+    font-size: 14px;
+    font-weight: bold;
+    /* float: right; */
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 5px;
+    margin-left: 1%;
+    margin-right: 0%;
+}
 .hideANDseek
 {
     /*display: grid;*/
@@ -566,6 +577,7 @@ select{
     float: left;
     margin-right: 30%;
 }
+
 .form-style-1 .label-3 {
     margin: 0 0 3px 0;
     padding: 0px;
@@ -598,6 +610,22 @@ select{
     font-weight: bold;
     float: left;
     margin-right: 10px;
+}
+.form-style-1 .label-7 {
+    margin: 0 0 3px 0;
+    padding: 0px;
+    display: block;
+    font-weight: bold;
+    float: left;
+    margin-right: 38%;
+}
+.form-style-1 .label-8 {
+    margin: 0 0 3px 0;
+    padding: 0px;
+    display: block;
+    font-weight: bold;
+    float: left;
+    margin-right: 10%;
 }
 .form-style-1 .label-small {
     margin: 0 0 3px 0;
@@ -901,6 +929,12 @@ select{
         /*background-color:#d6e9c6 !important;*/
          background-color:#f6c1b5 !important;
  }
+.bgfont-12{
+    font-size: 12px; 
+ }
+.bodypadding-10{
+    padding:10px;
+}
  @media screen and (max-width:680px) {
 
      .imglogon {
@@ -1004,6 +1038,24 @@ select{
     background-color: #db6144;
     padding-left: 10px;
 }
+.barattach-4 {
+    margin-top: 0px;
+    width: 560px;
+    height: 40px;
+    /*background-color: #5baa8c;*/
+    /*background-color: #db6144;*/
+    background-color: #e5927e;
+    padding-left: 10px;
+}
+.barattach-5 {
+    margin-top: 0px;
+    width: 440px;
+    height: 40px;
+    /*background-color: #5baa8c;*/
+    /*background-color: #db6144;*/
+    background-color: #e5927e;
+    padding-left: 10px;
+}
 .btnCreate{
     width: 0px;
     height: 7px;
@@ -1020,6 +1072,10 @@ select{
     margin-top: 0px;
     width: 40%;
     background-color: #fbfbf1;
+}
+.tdborrow
+{
+     width: 440px;
 }
  @media screen and (max-width:680px) {
     .tabbar-2{
