--- a/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
@@ -65,7 +65,7 @@
                     <label class="label-small">ยกมา<span class="required">*</span></label>&nbsp;<label class="label-small-3">คงเหลือ<span class="required">*</span></label>
                 </li>
                 <li>
-                    <input type="number" id = "txtBalance" name="field1" class="field-select-small" placeholder="" required />&nbsp;<input type="number" id = "txtRemain" name="field2" class="field-select-small" placeholder="" required />
+                    <input type="number" id = "txtBalance" name="field1" class="field-select-small" placeholder="" onblur="GetRemain()" required />&nbsp;<input type="number" id = "txtRemain" name="field2" class="field-select-small" placeholder="" required disabled/>
                 </li>
                 <li>
                     <label class="label-small-2">หาย</label>&nbsp;<label class="label-small-2">ซ่อม</label>&nbsp;<label class="label-small-2">ชำรุด</label>
