--- a/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
@@ -184,6 +184,7 @@
         var Isview = val[2];
 
         GetData(@Request.Params["id"]);
+        GetRemain(@Request.Params["id"]);
         ControlEnable(Isview);
     });
 </script>
