--- a/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
@@ -5,6 +5,44 @@
 <script src="@Url.Content("~/Scripts/CUDS/BDC/CreateBDC.js")" type="text/javascript"></script>
 @*<script src="@Url.Content("~/Scripts/CUDS/BDC/BDCJob.js")" type="text/javascript"></script>*@
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
+<div class="modal fade" id="quotationDialog" role="dialog">
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Quotation</h4>
+            </div>
+            <div class="modal-body">
+                 <div class="table-overflow">
+                         <table class="barattach-4">
+                             <tr>
+                                 <td>
+                                     <div class="topicText-2">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
+                                 </td>
+                             </tr>
+                         </table>
+                        @*<table id="tblQuotation" class="table table-striped table-hover table-responsive">*@
+                     <table id="tblQuotation" class="table-striped table-hover table-responsive">
+                         <thead class="bgthead bgfont-12">
+                             <tr>
+                                 <th class="bodypadding-10">No.</th>
+                                 <th class="bodypadding-10">Quote Id</th>
+                                 <th class="bodypadding-10">Potential Customer</th>
+                                 <th class="bodypadding-10">Amount</th>
+                                 <th class="bodypadding-10">Revision</th>
+                                 <th class="bodypadding-10">Owner</th>
+                             </tr>
+                         </thead>
+                         <tbody id="quotationBody" class="bgfont-12"></tbody>
+                     </table>
+                </div>
+                @*</div>*@
+                @*<ul class="pagination pagination-lg pager" id="myPager"></ul>*@
+            </div>
+        </div>
+    </div>
+</div>
 <table>
     <tr>
         <td>
@@ -15,34 +53,7 @@
 @*<br />*@
   <!-- Modal -->
 @*//===================================================================Bootstrap*@
-<div class="modal fade" id="quotationDialog" role="dialog">
-    <div class="modal-dialog">
 
-        <!-- Modal content-->
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Quotation</h4>
-            </div>
-            <div class="modal-body">
-                <table id="tblQuotation" class="table table-striped table-hover">
-                    <thead class="bgthead">
-                        <tr>
-                            <th>No.</th>
-                            <th>เลขที่ Quotation</th>
-                            <th>รายละเอียด</th>
-                            <th>ลูกค้า</th>
-                            <th>ราคา</th>
-                        </tr>
-                    </thead>
-                    <tbody id="quotationBody"></tbody>
-                </table>
-                @*<ul class="pagination pagination-lg pager" id="myPager"></ul>*@
-            </div>
-        </div>
-
-    </div>
-</div>
 
 @*//===================================================================CSS w3school*@
 <div id="myModal">
@@ -69,11 +80,11 @@
                 </ul>
                 <ul class="form-style-1">
                     <li>
-                        <label class="label-big">ราคาขาย</label>&nbsp;<label class="label-small">ราคาทุน</label>
+                        <label class="label-big" id="lblPrice">ราคาขาย</label>&nbsp;<label class="label-small" id="lblCost">ราคาทุน</label>
                         <input type="text" id = "txtPrice" name="field1" class="text-size120 text-right" placeholder="0.00" disabled />&nbsp;<input type="text" id = "txtCost" name="field2" class="text-size120 text-right" placeholder="0.00" disabled />
                     </li>
                     <li>
-                        <label>กำไร</label>
+                        <label id="lblProfit">กำไร</label>
                         <input type="text" id = "txtProfit" name="field1" class="field-divided text-right" placeholder="0.00" disabled />
                     </li>
                 </ul>
