--- a/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
@@ -56,9 +56,9 @@
                 <th class="hidecolumn">ID</th>
                 <th class="Rowpointer">Doc Version</th>
                 <th class="Rowpointer">ใบเสนอราคา</th>
-                <th class="Rowpointer">ราคาขาย</th>
-                <th class="Rowpointer">ราคาทุน</th>
-                <th class="Rowpointer">กำไร</th>
+                <th class="gvPrice Rowpointer">ราคาขาย</th>
+                <th class="gvCost Rowpointer">ราคาทุน</th>
+                <th class="gvProfit Rowpointer">กำไร</th>
                 <th></th>
             </tr>
         </thead>
