--- a/Alpha/AlphaMvc/Views/Borrow/CreateBorrow.cshtml
+++ b/Alpha/AlphaMvc/Views/Borrow/CreateBorrow.cshtml
@@ -7,37 +7,45 @@
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
     <!-- Modal -->
 <div class="modal fade" id="productDialog" role="dialog">
-    <div class="modal-dialog" style="margin-top: -300px;">
-
+    <div class="modal-dialog">
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Product</h4>
+                <h4 class="modal-title">Serial</h4>
             </div>
             <div class="modal-body">
-                <div class="table-responsive">
-                    <table id="tblCustomer" class="table table-striped table-hover">
-                        <thead class="bgthead">
+                <div class="table-overflow">
+                    <table class="barattach-5">
+                        <tr>
+                            <td>
+                                <div class="topicText-2">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
+                            </td>
+                        </tr>
+                    </table>
+                    @*<table id="tblQuotation" class="table table-striped table-hover table-responsive tdborrow">*@
+                    <table id="tblBorrow" class="table-striped table-hover table-responsive tdborrow">
+                        <thead class="bgthead bgfont-12">
                             <tr>
-                                <th class="Rowpointer">No.</th>
+                                <th class="Rowpointer bodypadding-10">No.</th>
                                 <th class="hidecolumn">ID</th>
-                                <th class="Rowpointer">Serial</th>
-                                <th class="Rowpointer">หมายเลขเครื่อง</th>
-                                <th class="Rowpointer">ยี่ห้อ</th>
-                                <th class="Rowpointer">ขนาด</th>
-                                <th class="Rowpointer">รุ่น</th>
+                                <th class="Rowpointer bodypadding-10">Serial</th>
+                                <th class="Rowpointer bodypadding-10">หมายเลขเครื่อง</th>
+                                <th class="Rowpointer bodypadding-10">ยี่ห้อ</th>
+                                <th class="Rowpointer bodypadding-10">ขนาด</th>
+                                <th class="Rowpointer bodypadding-10">รุ่น</th>
                             </tr>
                         </thead>
-                        <tbody id="productBody"></tbody>
+                        <tbody id="productBody" class="bgfont-12"></tbody>
                     </table>
                 </div>
+                @*</div>*@
                 @*<ul class="pagination pagination-lg pager" id="myPager"></ul>*@
             </div>
         </div>
-
     </div>
 </div>
+
 <style>
     table {
         background: #fbfbf1;
@@ -67,7 +75,7 @@
                     <label class="label-small">ขนาด</label>&nbsp;<label class="label-small-3">จำนวนที่ยืม</label>
                 </li>
                 <li>
-                    <input type="text" id="txtSize" name="field1" class="field-select-small" placeholder="" />&nbsp;<input type="text" name="field2" id="txtAmount" class="field-select-small" placeholder="" />
+                    <input type="text" id="txtSize" name="field1" class="field-select-small" placeholder="" />&nbsp;<input type="text" name="field2" id="txtAmount" class="field-select-small" placeholder="" onblur="CheckBorrow()" />
                 </li>
                 
                 <li>
@@ -84,10 +92,11 @@
                         <label class="label-small-2">ดี</label>&nbsp;<label class="label-small-2">หาย</label>&nbsp;<label class="label-small">ซ่อม</label>&nbsp;<label class="label-small-2">ชำรุด</label>
                     </li>
                     <li>
-                        <input type="text" id="txtReturnGood" name="field6" class="field-select-small" placeholder="ดี" />&nbsp;<input type="text" name="field6" id="txtReturnLost" class="field-select-small" placeholder="หาย" />&nbsp;<input type="text" id="txtReturnRepair" name="field7" class="field-select-small" placeholder="ซ่อม" />&nbsp;<input type="text" id="txtReturnBad" name="field8" class="field-select-small" placeholder="ชำรุด" />
+                        <input type="text" id="txtReturnGood" name="field6" class="field-select-small" value="0" />&nbsp;<input type="text" name="field6" id="txtReturnLost" class="field-select-small" value="0" />&nbsp;<input type="text" id="txtReturnRepair" name="field7" class="field-select-small" value="0" />&nbsp;<input type="text" id="txtReturnBad" name="field8" class="field-select-small" value="0" />
                     </li>
                 <li>
-                    <button type="button" class="btn btn-primary" onclick="ConfirmDialog('Create','JobOrderBorrow',0)">Save</button>
+                    <button type="button" class="btn btn-primary" onclick="CheckReturnAmount()">Save</button>
+                    <input type="hidden" id="hidReturn" />
                 </li>
              </ul>
 </form>
@@ -97,4 +106,13 @@
     $(document).ready(function () {
         CheckAuthorization();
     });
+    function CheckReturnAmount()
+    {
+        //var returnStatus = $('#hidReturn').val();
+        CheckReturn();
+        //if(returnStatus == 1)
+        //{
+            Isvalidate('Create', 'JobOrderBorrow', 0)
+        //}
+    }
 </script>
