--- a/Alpha/AlphaMvc/Views/ProductAdjust/IndexProductAdjust.cshtml
+++ b/Alpha/AlphaMvc/Views/ProductAdjust/IndexProductAdjust.cshtml
@@ -3,7 +3,7 @@
 }
 
 <script src="@Url.Content("~/Scripts/EditableGrid/paging.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/CUDS/Products/IndexProducts.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/CUDS/ProductAdjustment/IndexProductAdjustment.js")" type="text/javascript"></script>
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 <style>
     .paging-nav {
@@ -37,7 +37,7 @@
     <tr>
         <td>
             <label class="topicmargin-size70">Products</label>
-            <a href="/Products/CreateProducts"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" id="ProductsCreate" /></a>
+            <a href="/ProductAdjust/CreateProductAdjust"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" id="ProductsCreate" /></a>
             <div class="topicText">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
         </td>
     </tr>
@@ -53,7 +53,7 @@
                 <th class="Rowpointer">รุ่น</th>
                 <th class="Rowpointer">ขนาด</th>
                 <th class="Rowpointer">คงเหลือ</th>
-                <th class="hideANDseek Rowpointer">หน่วยนับ</th>
+                @*<th class="hideANDseek Rowpointer">หน่วยนับ</th>*@
                 <th></th>
             </tr>
         </thead>
