--- a/Alpha/AlphaMvc/Views/ProductAdjust/CreateProductAdjust.cshtml
+++ b/Alpha/AlphaMvc/Views/ProductAdjust/CreateProductAdjust.cshtml
@@ -101,11 +101,11 @@
                     <input type="number" id="txtRemain" name="field2" class="field-select-small" placeholder="" required disabled />
                 </li>
                 <li>
-                    <label class="label-small-2">เพิ่ม</label>&nbsp;<label class="label-small-2">หาย</label>&nbsp;<label class="label-small-2">ซ่อม</label>&nbsp;<label class="label-small-2">ชำรุด</label>
+                    <label class="label-small-2">เพิ่ม</label>&nbsp;<label class="label-small-2">ลด</label>
                 </li>
                 <li>
-                    <input type="text" id="txtAdded" name="field6" class="Number field-select-small" placeholder="" />&nbsp;
-                    <input type="text" id="txtLost" name="field6" class="Number field-select-small" placeholder="" />&nbsp;<input type="text" id="txtRepair" name="field7" class="Number field-select-small" placeholder="" />&nbsp;<input type="text" id="txtBreak" name="field8" class="Number field-select-small" placeholder=""/>
+                    <input type="text" id="txtAdded" name="field6" class="Number field-select-small" placeholder="" value="0"/>&nbsp;
+                    <input type="text" id="txtDeduction" name="field6" class="Number field-select-small" placeholder="" value="0"/>
                 </li>
                 <br />
                 <li>
