--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -502,15 +502,6 @@
                                                                 </td>
                                                                 <td>
                                                                     <input type="text" id="txtManDay" class="ManDay select-size50-height23 txtdisablerow" disabled />
-                                                                    @*<select class="ManDay select-size50">
-                                                                        <option value="0">อา</option>
-                                                                        <option value="1">จ</option>
-                                                                        <option value="2">อ</option>
-                                                                        <option value="3">พ</option>
-                                                                        <option value="4">พฤ</option>
-                                                                        <option value="5">ศ</option>
-                                                                        <option value="6">ส</option>
-                                                                    </select>*@
                                                                 </td>
                                                                 <td>
                                                                     <input type="text" id="txtManTime" name="txtManTime" class="ManTime text-size50 textcenter">
@@ -566,7 +557,7 @@
                                                                     <input id="txtTechnicianType" type="text" value="" class="TechnicianType text-size120 txtdisablerow" disabled />
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtManDate" class="ManDate text-size100" onblur="GetManpowerHour()" />
+                                                                    <input type="text" id="txtManDate" class="ManDate text-size100" onchange="GetManpowerHour()" />
                                                                 </td>
                                                                 <td>
                                                                     <input type="text" id="txtManDay" class="ManDay select-size50-height23 txtdisablerow" disabled/>
