--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -93,7 +93,7 @@
 
             <li>
                 <label>ลูกค้า</label>
-                <input type="text" id="txtCustomerName" class="field-divided" placeholder="ลูกค้า/บริษัท" disabled />&nbsp;
+                <input type="text" id="txtCustomerName" class="field-divided textbox-size100" placeholder="ลูกค้า/บริษัท" disabled />&nbsp;
                 @*<a href="#" id="imgCustomer" data-toggle="modal" data-target="#customerDialog" onclick="BrowseCustomer">
                     <img src="@Url.Content("~/Images/search-engine.png")" class="btnimage" />
                 </a>*@
