--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -131,7 +131,7 @@
 
                 <li>
                     <label>ลูกค้า<span class="required">*</span></label>
-                    <input type="text" id="txtCustomerName" class="field-divided" placeholder="ลูกค้า/บริษัท" disabled />&nbsp;
+                    <input type="text" id="txtCustomerName" class="field-divided textbox-size100" placeholder="ลูกค้า/บริษัท" disabled />&nbsp;
                     @*<a href="#" data-toggle="modal" data-target="#customerDialog" onclick="BrowseCustomer()">
                         <img src="@Url.Content("~/Images/search-engine.png")" class="btnimage"  />
                     </a>*@
