--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -109,7 +109,8 @@
                 <label class="label-2" style="margin-right: 31.2%;">บุคคลติดต่อ</label>&nbsp;<label class="label-2">ผู้ประสานงาน</label>
             </li>
             <li>
-                <input type="text" id="txtContact" name="field1" class="field-divided" placeholder="บุคคลติดต่อ" disabled />&nbsp;<input type="text" name="field2" id="txtCoWorker" class="field-divided" placeholder="ผู้ประสานงาน" disabled />
+                <select id="cmbContact" class="field-divided" required></select>&nbsp;<select id="cmbCoWorker" class="field-divided" required></select>
+                @*<input type="text" id="txtContact" name="field1" class="field-divided" placeholder="" disabled />&nbsp;<input type="text" name="field2" id="txtCoWorker" class="field-divided" placeholder="" disabled />*@
             </li>
             <li>
                 <label class="label-2">ที่อยู่</label>
@@ -948,8 +949,9 @@
 
         ControlEnable(Isview);
         SetRowCal5();
-             
+        GetContact(@Request.Params["id"]);
         GetData(@Request.Params["id"]);
-        GetJobOrderBorrow(@Request.Params["id"]);     
+        GetJobOrderBorrow(@Request.Params["id"]); 
+        
     });
 </script>
